...
      />
      <RoundedButton text="Course" onPress={() => navigation.navigate('Course')} testID="courseEntityScreenButton" />
      <RoundedButton text="CourseClass" onPress={() => navigation.navigate('CourseClass')} testID="courseClassEntityScreenButton" />
      <RoundedButton text="Lesson" onPress={() => navigation.navigate('Lesson')} testID="lessonEntityScreenButton" />
      <RoundedButton text="Schedule" onPress={() => navigation.navigate('Schedule')} testID="scheduleEntityScreenButton" />
      <RoundedButton text="Quiz" onPress={() => navigation.navigate('Quiz')} testID="quizEntityScreenButton" />
      <RoundedButton text="Question" onPress={() => navigation.navigate('Question')} testID="questionEntityScreenButton" />
      <RoundedButton text="QuizQuestion" onPress={() => navigation.navigate('QuizQuestion')} testID="quizQuestionEntityScreenButton" />
      <RoundedButton text="StudentQuiz" onPress={() => navigation.navigate('StudentQuiz')} testID="studentQuizEntityScreenButton" />
      <RoundedButton text="Flashcard" onPress={() => navigation.navigate('Flashcard')} testID="flashcardEntityScreenButton" />
      {/* jhipster-react-native-entity-screen-needle */}
    </ScrollView>
  );
}
...
