...
import Form from '../../../shared/components/form/jhi-form';
import { useDidUpdateEffect } from '../../../shared/util/use-did-update-effect';
import styles from './quiz-question-styles';

// set up validation schema for the form
const validationSchema = Yup.object().shape({
  position: Yup.number().required(),
});

function QuizQuestionEditScreen(props) {
  const {
    getQuizQuestion,
    updateQuizQuestion,
...
          <Form initialValues={formValue} validationSchema={validationSchema} onSubmit={onSubmit} ref={formRef}>
            <FormField
              name="position"
              ref={positionRef}
              label="Position"
              placeholder="Enter Position"
              testID="positionInput"
              inputType="number"
            />
            <FormField
              name="quiz"
              inputType="select-one"
              ref={quizRef}
...
