...
      return;
    }
    setPage(page + 1);
    fetchQuizQuestions();
  };
  return (
    <View style={styles.container} testID="quizQuestionScreen">
      <FlatList
        contentContainerStyle={styles.listContent}
        data={quizQuestionList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
